--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
-{% block conteent %}
+{% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-align"></h3>
-
+<h3 class="light-blue-text text-darken-4 center-align">Tasks</h3>
 
 {% endblock %}
