--- a/taskmanager/templates/add_task.html
+++ b/taskmanager/templates/add_task.html
@@ -17,7 +17,8 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                <textarea id="task_description" name="task_description" minlength="5" maxlength="200" type="text" class="materialize-textarea validate" required></textarea>
+                <textarea id="task_description" name="task_description" minlength="5" maxlength="200"
+                    type="text" class="materialize-textarea validate" required></textarea>
                 <label for="task_description">Task Description</label>
             </div>
         </div>
@@ -35,9 +36,10 @@
                 <div class="switch">
                     <i class="fas fa-exclamation-circle prefix light-blue-text text-darken-4"></i>
                     <label for="is_urgent">
-                    <input id="is_urgent" name="is_urgent" type="checkbox">
-                    <span class="lever"></span>
-                    Is Urgent</label>
+                        <input id="is_urgent" name="is_urgent" type="checkbox">
+                        <span class="lever"></span>
+                        Is Urgent
+                    </label>
                 </div>
             </div>
         </div>
@@ -45,13 +47,13 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
-                <select name="category id" id="category_id" class="validate" required>
+                <select id="category_id" name="category_id" class="validate" required>
                     <option value="" disabled selected>Choose Category</option>
                     {% for category in categories %}
-                    <option value="{{ category.id }}">{{ category.category_name}}</option>
-                    {% endfor%}
+                        <option value="{{ category.id }}">{{ category.category_name }}</option>
+                    {% endfor %}
                 </select>
-                <label for="category id">Category</label>
+                <label for="category_id">Category</label>
             </div>
         </div>
         <!-- submit button -->
